--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,10 +135,11 @@ android {
     defaultConfig {
         applicationId "com.temppoc"
         minSdkVersion rootProject.ext.minSdkVersion
-        missingDimensionStrategy 'react-native-camera', 'general'
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        missingDimensionStrategy 'react-native-camera', 'general'
+        missingDimensionStrategy 'react-native-camera', 'mlkit'
     }
     splits {
         abi {
