--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
     "reactotron-mst": "3.1.4",
